# LTRROE

./: LICENSE  Makefile  README  README.md  README.ru.md  algorithmes.py  models.py  pyproject.toml  test_data.py  visualisation.py
eng/: ACADEMIC_README_ENG.md  algorithmes.py  demo_ltrroe.py  models.py  visualisation.py
ltrroe/: paths.py
ltrroe/core/: demo.py  test_data.py  visualisation.py
ltrroe/synth/: project_level.py  rf_project.py  rf_task.py  spearman.py  task_level.py  xgb_model.py
ltrroe_eng/datasets/: synthetic_tasks27.csv  synthetic_tasks42.csv
ltrroe_eng/executable/: algorithms.py  demo_ltrroe.py  generate_dataset.py  models.py  randomforest_model.py  test_data.py  validator.py  visualisation.py  xgboost_model.py
ltrroe_eng/files/: ltrroe_xgboost_model.pkl  rf_synth_project_risk_ratio.pkl  rf_synth_project_tail_width.pkl  synthetic_tasks.csv
ltrroe_eng/main/: avg_eff_graph_cluster.py  chapter_final.py  demo_ltrroe.py  generate_dataset.py  generate_synth_project_metrics.py  import_gryzzly_data.py  rf_real_duration.py  rf_real_risk.py  rf_synth_model.py  rf_synth_risk.py  run_simulations.py  spirmen.py  test_data.py  validator.py  visualisation.py  xgb_synth_model.py
ltrroe_rus/: readme.txt
ltrroe_rus/executable/: demo_ltrroe.py  generate_dataset.py  models.py  randomforest_model.py  test_data.py  validator.py  xgboost_model.py
ltrroe_rus/files/: metrics_results_full.csv  rf_synth_project_duration.pkl  synthetic_project_metrics.csv
rus/: ACADEMIC_README_RUS.md  README_RUS.md  algorithmes.py  demo_ltrroe.py
tests/: test_algorithms.py
(+24 files in other folders)
